--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                             <p>Home</p>
                             <h1>Transforming Finance & Empowering you!</h1>
                 <h4>Unlock the future of Financial Services with our cutting edge solutions </h4>
-                <h6><img src="img/Checkbox.png" alt="">Seamless Financial Management</h6>
-                <h6><img src="img/Checkbox.png" alt="">Investment Opportunity</h6>
-                <h6><img src="img/Checkbox.png" alt="">Cutting Edge Security</h6>
-                <h6><img src="img/Checkbox.png" alt="">24/7 Customer Support</h6>
+                <h6><img src="Checkbox.png" alt="">Seamless Financial Management</h6>
+                <h6><img src="Checkbox.png" alt="">Investment Opportunity</h6>
+                <h6><img src="Checkbox.png" alt="">Cutting Edge Security</h6>
+                <h6><img src="Checkbox.png" alt="">24/7 Customer Support</h6>
                 <div class="buttons">
                     <button>Get Started</button>
                     <button class="b2">Login</button>
                 </div>
             </div>
             <div class="img">
-                <img src="img/Header Image.png" alt="">
+                <img src="Header Image.png" alt="">
             </div>
        </div>
        <section class="sec-2">
@@ -75,7 +75,7 @@
 
         <!-- Center Image -->
         <div class="feature-image">
-            <img src="img/Image Container.png" alt="Financial dashboard">
+            <img src="Image Container.png" alt="Financial dashboard">
         </div>
 
         <!-- Right -->
@@ -151,7 +151,7 @@
 
         <!-- Right Image -->
         <div class="sec3-image">
-            <img src="img/Image Container.png" alt="Financial Meeting">
+            <img src="Image Container.png" alt="Financial Meeting">
         </div>
 
     </div>
@@ -225,7 +225,7 @@
             <button class="arrow">&#8592;</button>
 
             <div class="test-content">
-                <img src="img/Header Image.png" alt="Profile">
+                <img src="Header Image.png" alt="Profile">
 
                 <div class="test-text">
                     <h4>Aluko Kehinde</h4>
@@ -285,7 +285,7 @@
 
     <!-- Image -->
     <div class="sec5-image">
-        <img src="img/team-image.png" alt="Team">
+        <img src="Header Image.png" alt="Team">
     </div>
 
 </section>
@@ -345,4 +345,5 @@
 
 
 </body>
+
 </html>
